<resources>
    <string name="app_name">Pokedex</string>
    <string name="search_pokemon">Search pokemon</string>
    <string name="random_pokemon">Random pokemon</string>
    <string name="favorites">Favorites</string>
    <string name="pokemon_name">Pokemon name</string>
    <string name="add_to_favorite">Add to favorite</string>
    <!-- Toast texts -->
    <string name="the_field_must_not_be_empty">The field must not be empty</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="pokemon_height">Pokemon height</string>
    <string name="pokemon_weight">Pokemon weight</string>
    <string name="pokemon_id">Pokemon ID</string>
    <string name="search">Search</string>
    <string name="this_pokemon_added_to_favorites">This pokemon has already been added to favorites</string>
    <string name="failed_to_add_pokemon">Failed to add pokemon to favorites</string>
    <string name="pokemon_has_been_added">Pokemon has been successfully added to favorites</string>
    <string name="delete_all_pokemons">Delete all pokemons</string>
    <string name="confirm_action">Confirm action</string>
    <string name="you_dont_have_pokemons">You don\'t have any pokemon favorites</string>
    <string name="show_random_pokemon">Show random pokemon</string>
    <string name="failed_to_generate_pokemon">Failed to generate pokemon</string>
</resources>