<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/cardview_dark_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchPokemonEdt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/round_shape"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/pokemon_name"
            android:maxLines="2"
            android:paddingStart="17dp"
            android:paddingEnd="12dp"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/light_grey_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/searchPokemonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:src="@drawable/ic_baseline_search"
            android:text="@string/search"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchPokemonEdt" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/pokemon_card_background"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchPokemonEdt">

            <TextView
                android:id="@+id/pokemonIdText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/pokemon_id"
                android:textColor="@color/white"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/pokemonImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view1"
                android:layout_width="125dp"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonIdText" />

            <TextView
                android:id="@+id/pokemonNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="55dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/pokemon_name"
                android:textColor="@color/white"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonImage" />

            <View
                android:id="@+id/view2"
                android:layout_width="160dp"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonNameText" />

            <ProgressBar
                android:id="@+id/loadingPokemonProgressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/scarlet"
                app:layout_constraintBottom_toTopOf="@+id/pokemonNameText"
                app:layout_constraintEnd_toEndOf="@+id/pokemonImage"
                app:layout_constraintStart_toStartOf="@+id/pokemonImage"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pokemonImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="36dp"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:src="@mipmap/pokeball"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/heightImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="44dp"
                android:src="@drawable/ic_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonNameText"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/pokemonHeightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="56dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/pokemon_height"
                android:textColor="@color/white"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/heightImage"
                app:layout_constraintTop_toBottomOf="@+id/pokemonNameText" />

            <View
                android:id="@+id/view3"
                android:layout_width="127dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.126"
                app:layout_constraintStart_toEndOf="@+id/heightImage"
                app:layout_constraintTop_toBottomOf="@+id/pokemonHeightText" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/weightImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_weight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heightImage" />

            <TextView
                android:id="@+id/pokemonWeightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="56dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/pokemon_weight"
                android:textColor="@color/white"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/heightImage"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/addToFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/add_to_favorite"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>