<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/cardview_dark_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pokemon_card_background"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchPokemonEdt"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/pokemonIdText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/pokemon_id"
                android:textColorHint="@color/cardview_dark_background"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/pokemonImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"/>

            <View
                android:id="@+id/view1"
                android:layout_width="125dp"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonIdText"/>

            <TextView
                android:id="@+id/pokemonNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="55dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/pokemon_name"
                android:textColorHint="@color/cardview_dark_background"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonImage"/>

            <View
                android:id="@+id/view2"
                android:layout_width="160dp"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonNameText"/>

            <ImageView
                android:id="@+id/pokemonImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/heightImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="44dp"
                android:src="@drawable/ic_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.195"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonNameText"
                app:layout_constraintVertical_bias="1.0"/>

            <TextView
                android:id="@+id/pokemonHeightText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="56dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/pokemon_height"
                android:textColorHint="@color/cardview_dark_background"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/heightImage"
                app:layout_constraintTop_toBottomOf="@+id/pokemonNameText"/>

            <View
                android:id="@+id/view3"
                android:layout_width="127dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.126"
                app:layout_constraintStart_toEndOf="@+id/heightImage"
                app:layout_constraintTop_toBottomOf="@+id/pokemonHeightText"/>

            <ImageView
                android:id="@+id/weightImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_weight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.195"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heightImage"/>

            <TextView
                android:id="@+id/pokemonWeightText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="56dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/pokemon_weight"
                android:textColorHint="@color/cardview_dark_background"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/heightImage"
                app:layout_constraintTop_toBottomOf="@+id/view3"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>